# fubuki

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature.md  refactor.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  complete-format-check.yml
cmake/: config.cmake.in  macros.cmake
cmake/modules/: Findclang-format.cmake
dependencies/: .clang-tidy  CMakeLists.txt
doc/: CONTRIBUTING.md  DESIGN.md  README.md  STYLE-GUIDE.md
doc/doxygen/: doxygen-style.css
doc/maintaining/: README.md  Vulkan-SDK-Upgrade.md
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  README.md  as_span.hpp  assertion.cpp  assertion.hpp  collect.hpp  compile_time_hash.hpp  constants.hpp  deduce.hpp  dim.hpp  enums.hpp  flag_mask.hpp  format.cpp  format.hpp  handle.hpp  hash.hpp  invoke.hpp  md_vector.hpp  opaque_ptr.hpp  pfn.cpp  pfn.hpp  pnext_chain.hpp  pos.hpp  rectangle.hpp  result.hpp  small_vector.hpp  string_literal.hpp  structure_type.hpp  surface_data.hpp  types.hpp  unique_c_ptr.hpp  validate.cpp  validate.hpp  version_number.hpp  vulkan.hpp
libs/extension/: CMakeLists.txt  README.md  amd_anti_lag.cpp  amd_anti_lag.hpp  amd_buffer_marker.cpp  amd_buffer_marker.hpp  amd_device_coherent_memory.hpp  amd_display_native_hdr.cpp  amd_display_native_hdr.hpp  amd_draw_indirect_count.cpp  amd_draw_indirect_count.hpp  amd_gcn_shader.hpp  amd_gpu_shader_half_float.hpp  amd_gpu_shader_int16.hpp  amd_memory_overallocation_behavior.hpp  amd_mixed_attachment_samples.hpp  amd_negative_viewport_height.hpp  amd_pipeline_compiler_control.hpp  amd_rasterization_order.hpp  amd_shader_ballot.hpp  amd_shader_core_properties.hpp  amd_shader_core_properties2.hpp  amd_shader_early_and_late_fragment_tests.hpp  amd_shader_explicit_vertex_parameter.hpp  amd_shader_fragment_mask.hpp  amd_shader_image_load_store_lod.hpp  amd_shader_info.cpp  amd_shader_info.hpp  amd_shader_trinary_minmax.hpp  amd_texture_gather_bias_lod.hpp  amdx_shader_enqueue.cpp  amdx_shader_enqueue.hpp  android_external_format_resolve.hpp  android_external_memory_android_hardware_buffer.cpp  android_external_memory_android_hardware_buffer.hpp  arm_pipeline_opacity_micromap.hpp  arm_rasterization_order_attachment_access.hpp  arm_render_pass_striped.hpp  arm_scheduling_controls.hpp  arm_shader_core_builtins.hpp  (+492 more)
libs/fuyu/: CMakeLists.txt  README.md  allocation.cpp  allocation.hpp  buffer.cpp  buffer.hpp  buffer_view.cpp  buffer_view.hpp  command_buffer_array.cpp  command_buffer_array.hpp  command_pool.cpp  command_pool.hpp  compute_pipeline.cpp  compute_pipeline.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_array.cpp  (+57 more)
libs/io/: CMakeLists.txt  README.md  display.cpp  display.hpp  event.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  screen.cpp  screen.hpp  window.cpp  window.hpp
libs/io/doxygen/: doxygen.hpp
libs/io/event/: dispatcher.hpp  handler.hpp  loop.cpp  loop.hpp  queue.hpp  send.cpp  send.hpp
libs/io/information/: display.hpp  window.hpp
libs/io/platform/: CMakeLists.txt  README.md  current_platform.hpp  display_info.hpp  error.hpp  keyboard_key.hpp  mouse_button.hpp  mouse_state.hpp  screen_properties.hpp  window_info.hpp
libs/io/platform/cmake/: code_gen.cmake
libs/io/platform/doxygen/: doxygen.hpp
libs/io/platform/event/: dispatcher.hpp  events.hpp  handler.hpp  key.hpp  loop_routines.hpp  mouse.hpp  queue.cpp  queue.hpp  send_error.hpp  source.hpp  user.hpp  window.hpp
libs/io/platform/linux/: display.hpp  error.hpp  fd_timer.cpp  fd_timer.hpp  file_descriptor.cpp  file_descriptor.hpp  keyboard.hpp  mouse.hpp  scoped_mmap.cpp  scoped_mmap.hpp  screen.cpp  screen.hpp  send_event.hpp  window.hpp  window_registry.cpp  window_registry.hpp
libs/io/platform/linux/detail/: evdev.hpp
libs/io/platform/linux/doxygen/: doxygen.hpp
libs/io/platform/linux/event/: loop.cpp  loop.hpp  mouse_state.hpp  stop_loop.cpp  stop_loop.hpp
libs/io/platform/linux/wayland/: code.hpp  decoration.hpp  display.cpp  display.hpp  display_global.hpp  error.hpp  event_loop.cpp  event_loop.hpp  fixed.hpp  interface.hpp  keyboard.cpp  keyboard.hpp  pointer.cpp  pointer.hpp  registry.cpp  registry.hpp  screen.cpp  screen.hpp  seat.cpp  seat.hpp  shm_buffer.cpp  shm_buffer.hpp  shm_pool.cpp  shm_pool.hpp  surface.cpp  surface.hpp  window.cpp  window.hpp  window_parts.cpp  window_parts.hpp
libs/io/platform/linux/wayland/display/: global_handles.hpp  input.hpp  input_state.hpp  properties.hpp
libs/io/platform/linux/wayland/doxygen/: doxygen.hpp
libs/io/platform/linux/wayland/xdg/: interface.hpp  surface.cpp  surface.hpp  toplevel.cpp  toplevel.hpp  wm_base.cpp  wm_base.hpp
libs/io/platform/linux/wayland/zxdg/: decoration.cpp  decoration.hpp  interface.hpp
libs/io/platform/linux/xkb/: context.cpp  context.hpp  key_code.hpp  keymap.cpp  keymap.hpp  state.cpp  state.hpp
libs/io/platform/linux/xkb/doxygen/: doxygen.hpp
libs/io/platform/linux/xlib/: code.hpp  display.cpp  display.hpp  display_lock.cpp  display_lock.hpp  error.hpp  event_loop.cpp  event_loop.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  screen.cpp  screen.hpp  unique_ptr.hpp  window.cpp  window.hpp
libs/io/platform/linux/xlib/detail/: code.hpp  keyboard.hpp
libs/io/platform/linux/xlib/doxygen/: doxygen.hpp
libs/io/platform/linux/xlib/xrandr/: crtc.hpp  output.hpp  screen_config.hpp  screen_resource.hpp
libs/io/platform/linux/xlib/xrandr/doxygen/: doxygen.hpp
libs/io/platform/views/: display.hpp
libs/io/platform/win32/: code.hpp  display.hpp  error.hpp  event_loop.cpp  event_loop.hpp  keyboard.hpp  mouse.hpp  screen.cpp  screen.hpp  send_event.hpp  window.cpp  window.hpp  window_data.cpp  window_data.hpp  window_registry.cpp  window_registry.hpp
libs/io/platform/win32/detail/: send_event.hpp
libs/io/platform/win32/doxygen/: doxygen.hpp
tests/: .clang-tidy  CMakeLists.txt
tutorials/: .clang-tidy  CMakeLists.txt  README.md
(+3427 files in other folders)
